force-app/main/default/objects/Platform_Unit_of_Work__c/Platform_Unit_of_Work__c.object-meta.xml
<CustomObject>
    <label>Platform Unit of Work</label>
    <nameField>
        <displayFormat>UOW-{00000000}</displayFormat>
        <label>UOW Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Unit of Works</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>