force-app/main/default/objects/Platform_Unit_of_Work__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Platform_Unit_of_Works</relationshipName>
    <type>Lookup</type>
</CustomField>