force-app/main/default/objects/Platform_Unit_of_Work__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Log</label>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Platform Unit of Works</relationshipLabel>
    <relationshipName>Platform_Unit_of_Works</relationshipName>
    <type>Lookup</type>
</CustomField>