force-app/main/default/objects/Platform_Unit_of_Work__c/fields/Next__c.field-meta.xml
<CustomField>
    <fullName>Next__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next</label>
    <referenceTo>Platform_Unit_of_Work__c</referenceTo>
    <relationshipLabel>Platform Unit of Works (Next)</relationshipLabel>
    <relationshipName>Platform_Unit_of_Works1</relationshipName>
    <type>Lookup</type>
</CustomField>