force-app/main/default/objects/Platform_Unit_of_Work__c/fields/Num_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Children__c</fullName>
    <label>Num of Children</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>