force-app/main/default/objects/Platform_Unit_of_Work__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Platform_Unit_of_Work__c</referenceTo>
    <relationshipLabel>Platform Unit of Works</relationshipLabel>
    <relationshipName>Platform_Unit_of_Works</relationshipName>
    <type>Lookup</type>
</CustomField>