force-app/main/default/objects/Platform_Unit_of_Work__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payload__c</columns>
    <columns>Parent__c</columns>
    <columns>Next__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Error_Log__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>